Mon Nov 04 01:31:47 GMT 2002  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Catch by const reference.

Mon Nov 04 01:18:53 GMT 2002  Olly Betts <olly@survex.com>

	* HACKING: Added note about use of various C++ features.  Also
	  tidied up various odds and ends.

Sun Nov 03 22:59:34 GMT 2002  Olly Betts <olly@survex.com>

	* api/omdatabaseinternal.cc: Eliminated entirely superfluous use of
	  dynamic_cast.

Sun Nov 03 22:46:34 GMT 2002  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc,common/database.h,common/net_database.h:
	  Replace Database::is_network() with Database::as_networkdatabase()
	  which returns a pointer or NULL.  This eliminates the need to use
	  dynamic_cast in MultiMatch.

Wed Oct 23 05:24:14 BST 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Resolved TODO entry by consulting Stroustrup
	  (it is safe to throw and catch an exception in a destructor,
	  even when that destructor is being called during a stack unwind
	  caused by an exception being thrown).

Wed Oct 16 20:05:39 BST 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btreetest.cc: Suppress (most) output from
	  Btree::check unless verbose (-v) is enabled.

Mon Oct 14 15:13:18 BST 2002  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Fixed compilation problem with std:: on
	  GCC 3.2.

Mon Oct 14 15:07:03 BST 2002  Olly Betts <olly@survex.com>

	* api/omstem.cc: French and Finnish stemmers were switched!
	
Mon Oct 14 02:49:12 BST 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_utils.h: change sort preserving packing for
	  strings.  This one does better provided the strings being packed
	  don't contain many zero bytes (which is true of the termnames which
	  we pack with this).

Mon Oct 14 02:45:20 BST 2002  Olly Betts <olly@survex.com>

	* tests/stemtest.cc: Updated to reflect new naming of stemming test
	  data.

Sun Oct 13 17:06:26 BST 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.
