@@ -1,3 +1,8 @@
+Mon Nov 04 02:35:22 GMT 2002  Olly Betts <olly@survex.com>
+
+	* include/om/omerror.h,net/omerr_string.cc,netprogs/omprogsrv.cc,
+	  netprogs/omtcpsrv.cc,testsuite/testsuite.cc: don't use typeid().
+	  
 Mon Nov 04 01:31:47 GMT 2002  Olly Betts <olly@survex.com>
 
 	* testsuite/testsuite.cc: Catch by const reference.
